# evm

./: .gitmodules  CMakeLists.txt
asm_evm/: CMakeLists.txt
asm_evm/src/: fitter.cpp  fitter.h  lexer.cpp  lexer.h  main.cpp  numeric.h  parser.cpp  parser.h  tokens.h  trie.h
inc/evm/: endian.h  machine.h  opcodes.h
inc/evm_asm/: lexer.h
src/: machine.cpp  main.cpp  opcodes.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
